--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.3",
+    "vuelidate": "^0.7.6",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
   },
